More minor fixes to spacing

--- a/styles.css
+++ b/styles.css
@@ -1248,7 +1248,7 @@ input::placeholder, textarea::placeholder {
     gap: 12px; 
     row-gap: 8px;
     padding: 6px 10px; 
-    margin-top: 90px; 
+    margin-top: 70px; 
     background: transparent;
   }
   .corner-bl, .corner-br { flex: 1 1 45%; align-items: flex-start; text-align: left; }
